# revue

./: .gitignore  .gitlab-ci.yml  .revue.yml  ARCHITECTURE.md  CLAUDE.md  PR-REVUE-91.md  README.md  bitbucket-pipelines.yml  conftest.py  package-lock.json  package.json  requirements-ci.txt
packaging/revue/: .gitignore  README.md  manifest.example.json  manifest.schema.json  pyproject.toml
packaging/revue-ci/: PIPELINE_TEST.md  README.md  pyproject.toml
packaging/revue-ci/tests/: test_body_builder_cli_integration.py  test_cli.py  test_cli_evict_retry.py  test_cli_preserve_threads.py  test_diff_position_resolver_security.py  test_github_action.py  test_revue201_anchor.py  test_sage_classifier.py  test_sage_generator.py  test_sage_pipeline.py  test_suggestion_blocks.py  test_version_platform.py
packaging/revue/tests/: conftest.py  test_activate.py  test_agent_prompts_packaged.py  test_atomic_version_invariant.py  test_build_nuitka_resets_output_dirs.py  test_cache_paths.py  test_cli_manifest_url_validation.py  test_compile_roots_cover_modules.py  test_cost_footer.py  test_emit_usage.py  test_funnel_telemetry.py  test_install_doc_trust_model.py  test_install_shell_pty.py  test_install_shell_script.py  test_jwt_accessor_binding.py  test_licence_path_contract.py  test_local_run_dispatcher.py  test_local_run_gate.py  test_local_run_wheel_paths.py  test_main_branch_staging_promotion_pipeline.py  test_manifest_schema_included_in_wheel.py  test_manifest_schema_validates.py  test_pr_pipeline_web_suite_gate.py  test_py39_future_annotations.py  test_skill_wheel_requires_revue_core.py  test_support.py  test_three_package_publish.py  test_update_usage_cache.py  test_upgrade_prompt.py  test_validate.py  test_vendor_clean_preserves_first_class_files.py  test_vendor_rewrite_must_match.py  test_vendor_sources_path_safety.py  test_vendored_sources_in_sync.py  test_verify_wheel_licence_gate.py  test_version_platform_line.py  test_wheel_publishes_to_pypi.py
packaging/revue/tools/: sources.yaml  vendor_sources.py  verify_wheel_licence_gate.py
packaging/revue_core/: README.md  pyproject.toml
packaging/revue_core/tests/: test_dev_extras.py  test_imports.py  test_leaf_constraint.py  test_models.py  test_nuitka_module_mode_prevents_folding.py  test_platform_support.py  test_security_jwt_keys.py
src/: .gitignore  pyproject.toml
src/AIReviewer/: cli.py
src/AIReviewer/agents/: architecture-reviewer-leo.md  code-quality-expert-maya.md  consolidator-nova.yaml  leo.md  performance-expert-kai.md  router-cleo.yaml  security-analyst-zara.md
src/AIReviewer/core/: agent_loader.py  agent_runner.py  ai_client.py  ai_config.py  cleo_router.py  config_loader.py  contradiction_detector.py  contradiction_resolver.py  diff_parser.py  github_adapter.py  gitlab_adapter.py  models.py  noise_filters.py  pattern_injection.py  pipeline.py  sage_classifier.py  team_loader.py  vcs_adapter.py
src/AIReviewer/teams/: team-kotlin-android.yml  team-security-focus.yml  team-swift-ios.yml  team-typescript.yml
src/AIReviewer/tests/: test_cli.py  test_sage_classifier.py  test_sage_generator.py  test_sage_pipeline.py
src/cli/: reviews.py
src/db/: README.md  auto_scorer.py  connection.py  import_review.py  migrate.py
src/db/migrations/: 001_initial_schema.sql  002_drop_agents_table.sql
src/db/repositories/: __init__.py  base.py  review_repository.py
src/reviews/: __init__.py  models.py  service.py
src/revue/: cli.py
src/revue/agents/: kai.md  leo.md  maya.md  nova.yaml  zara.md
src/revue/comments/: __init__.py  _orphan_line_guard.py  _span_validator.py  _verifier.py  body_builder.py  consolidator.py  file_store.py  fingerprint.py  hunk_tracker.py  models.py  platform_adapter.py  position_adapter.py  poster.py  resolve.py  service.py  state_store.py  summary_builder.py
src/revue/core/: agent_loader.py  agent_names.py  agent_runner.py  ai_client.py  ai_config.py  bitbucket_adapter.py  cleo_router.py  config_loader.py  contradiction_detector.py  dedup_consolidator.py  diff_parser.py  diff_position_resolver.py  finding_schema.py  formatting.py  github_adapter.py  gitlab_adapter.py  key_resolver.py  license_validator.py  logging_channels.py  metrics.py  models.py  models_registry.yml  noise_filters.py  nova_consolidator.py  pipeline.py  pr_description_adapter.py  reply_tracking.py  reviewer_tools.py  sage_generator.py  shared_analysis.py  team_loader.py  tool_loop.py  usage_tracker.py  vcs_adapter.py
src/revue/infrastructure/: metrics_writer.py
src/revue/teams/: team-full-review.yml  team-python.yml  team-quick.yml
src/revue/tests/: test_body_builder_cli_integration.py  test_cli.py  test_cli_evict_retry.py  test_cli_preserve_threads.py  test_diff_position_resolver_security.py  test_github_action.py  test_revue201_anchor.py  test_sage_classifier.py  test_sage_generator.py  test_sage_pipeline.py  test_suggestion_blocks.py
src/web/: Dockerfile  auth.py  billing.py  config.py  csrf.py  database.py  fly.staging.toml  fly.toml  jwt_signing.py  jwt_verify.py  license.py  main.py  manifest.schema.json  metrics.py  models.py  rate_limiter.py  requirements.txt  revue.db
src/web/docs_content/: agents.md  faq.md  quickstart-bitbucket.md  quickstart-github.md  quickstart-gitlab.md  revue-yml-reference.md
src/web/infra/: __init__.py  pypi_client.py
src/web/legal_content/: privacy.md  terms.md
src/web/routes/: api_routes.py  auth_routes.py  billing_routes.py  dashboard_routes.py  docs_routes.py  legal_routes.py  skills_routes.py  usage_routes.py
src/web/services/: __init__.py  manifest_builder.py
src/web/static/: revue.css
src/web/templates/: account_plan.html  activate.html  analytics.html  base.html  billing.html  billing_success.html  ci_setup.html  conversion.html  dashboard.html  docs.html  landing.html  legal.html  login.html  onboarding.html  runs.html  signup.html
src/web/tests/: conftest.py  test_account_plan.py  test_analytics.py  test_api_subdomain.py  test_auth.py  test_billing.py  test_command_box.py  test_conversion.py  test_csrf.py  test_dashboard.py  test_docs.py  test_health.py  (+19 more)
(+708 files in other folders)
