[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revue"
version = "0.1.1"
description = "AI-powered multi-agent code review"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.20",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "tomli-w>=1.0",
]

[project.scripts]
revue = "revue.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["revue*", "cli*", "reviews*", "db*"]
exclude = ["web*"]

[tool.semantic_release]
version_toml = ["src/pyproject.toml:project.version"]
tag_format = "v{version}"
commit_message = "chore: bump version to {version} [skip ci]"
build_command = ""
upload_to_pypi = false
upload_to_release = false
changelog_file = ""

[tool.pytest.ini_options]
testpaths = ["revue/tests"]
pythonpath = ["."]
markers = [
    "e2e: End-to-end tests that require a live browser (Playwright)",
]
